Add query parameters for /did/search/{did}.
